# learning-pocs

./: .gitignore  README.md  index.html  script.js  style.css
bash/: awk.md  cut.md  grep.md  scripting.md  sed.md  sort.md  tail.md
bash/file_compression/: tar.md  unzip.md  zip.md
bash/file_permission/: README.md  chgrp.md  chmod.md
bash/media_processing/: ffmpeg.md
bash/networking/: curl.md  ping.md  rsync.md  scp.md  ssh.md  wget.md
bash/system_monitoring/: df.md  du.md  free.md  kill.md  ps.md  top.md  uptime.md
bash/text_processing/: awk.md  sort.md  tail.md
c/gdb-test/: README.md  gdb-test  gdb-test.c
c/helloworld/: helloworld.c
cpp/factorial-performance/: .gitignore  Makefile  README.md  factorial  factorial.cpp  factorial.h  factorial.py  factorial_c.py  factorial_v1.cpp  main.cpp
haskell/simple-server/: haskell.cabal
javascript/alpinejs-todo/: index.html
javascript/d3js-simple/: candlesticks.js  index.html
javascript/drag-n-drop/: index.html  script.js  style.css
javascript/indexedDB-todo/: README.md  index.html  package.json
javascript/my-vue-app/: package-lock.json  package.json
javascript/node-test-runner/: package.json  test.mjs
javascript/node-worker-threads/: README.md
javascript/nodejs-modern-patterns/: README.md  abortController.js  asyncIterators.js  fetchAPI.js  streamProcessing.js  testRunner.js  top-level-await.js  webStreams.js
javascript/opentelemetry/: README.md  app.js  package.json  (+2 more)
notes/: git-worktree.md
redis/: README.md
ruby/: hello.rb
rust/rget/: Cargo.toml  README.md
rust/rget/src/: main.rs
(+157 files in other folders)
