[package]
name = "rget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.26.0"
indicatif = "0.15.0"
reqwest = { version = "0.11", features = ["blocking", "json"] } # Add reqwest for HTTP requests
human_bytes = "0.4.3" # Add human_bytes for human-readable byte sizes
